added styles for texts

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,13 @@
 html, body {
     background: url("../images/map.jpg");
 } 
+
+.container {
+    height: 25%;
+	width: 100%;
+}
+
+p {
+    font-size: 20px; 
+    color: maroon;   
+}
